# Alignment_and_Reasoning_RL

./: .gitignore  0.26.0  DUAL_GPU_README.md  MEMORY_OPTIMIZATION.md  README.md  evaluate_model.py  extract_trial_results.py  grader_util.py  inference.py  memory_analysis.py  plot_training_progression.py  populate_trial_results.py  pyproject.toml  step0_baseLineGen.md  step0_baseLineModelEval.py  step1_sft.py  step1_sft_README.md  step2_sft_hyper.py  training_utils.py
config/: grpo_config.yaml  sft_config.yaml  sft_hyper_config.yaml
inference_sft/analysis/: categories_step_0.json  summary_step_0.json
inference_sft/eval_logs/: summary_eval_step_0_20260101_011555.json
prompts/: rl_zero.prompt
src/: __init__.py  analysis_utils.py  config_loader.py  data_utils.py  eval_worker.py  gpu_monitor.py  grpo_training_worker.py  logging_utils.py  training_worker.py  vllm_utils.py
step0_baseline/: README.md  evaluate_model.py  step0_baseLineModelEval.py
step1_sft/: README.md  step1_sft.py
step1_sft_hyper/: README.md  step1_sft_hyper.py
step1_sft_hyper/images/: README.md
step2_hyper/: README.md  step2_sft_hyper.py
step2_sft/: README.md  step2_sft.py
step3_GRPO/: README.md  README_TESTING.md  launch.ps1  launch.sh  launch_trl.sh  step3_grpo.py  test_cpu.py  train_grpo_fsdp.py  train_trl.py
step3_GRPO/configs/: fsdp_2gpu.yaml
step3_GRPO/eval/: vllm_eval.py
step3_GRPO/train/: advantage_group.py  checkpoint_utils.py  fsdp_grpo_trainer.py  fsdp_utils.py  grpo_trainer.py  rewards_math.py  vllm_rollout.py
utils/: __init__.py  dataset_loader.py  grader_util.py
