[project]
name = "alignment-reasoning-rl"
version = "0.1.0"
description = "Alignment and Reasoning with RL for Math Problems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "tqdm>=4.66.0",
    "sympy>=1.12",
    "latex2sympy2-extended>=1.10.1",
    "math-verify>=0.1.0",
    "pylatexenc>=2.10",
    "numpy>=1.26.0,<2.0",
    "scikit-learn>=1.3.0",
    "wandb>=0.23.1",
    "vllm>=0.13.0",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "trl>=0.12.0",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.2.7",
]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "black>=24.0.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["drgrpo_grader.py", "prompts/"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
